cd-8 panel and h4 jumping issue

--- a/_sass/_cd-8.scss
+++ b/_sass/_cd-8.scss
@@ -77,7 +77,7 @@
 
     h4:first-child {
       padding-top: 0;
-      margin-top: -5px;
+      margin-top: 0;
     }
 
   }
